# vclipbot

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: codeql-analysis.yml  docker.yml  rust.yml
cmd/vclipbot/: main.go
helm/: vclipbot-values.yaml
helm/vclipbot/: Chart.yaml  values.yaml
helm/vclipbot/templates/: _helpers.tpl  deployment.yaml  serviceaccount.yaml
src/: main.rs
src/bot/: clip_bot.rs  mod.rs  telegram_bot.rs
src/dal/: mod.rs  yarn_api.rs
src/dal/response/: clip_response.rs  mod.rs
src/dao/: clip_dao.rs  mod.rs
src/model/: clip.rs
