[package]
name = "vclipbot"
version = "1.1.0"
authors = [
    "Alessio Dionisi <hello@adns.io>",
    "Gabriele Carrettoni <gabriele.carrettoni@gmail.com>",
    "Pierluigi D'Andrea <mail@pierluigi.me>"
]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
telegram-bot = "0.7"
futures = "0.3"
fern = "0.6"
log = "0.4"
chrono = "0.4"
reqwest = { version = "0.10", features = [] }
scraper = "0.12"
async-trait = "0.1"
